# shift_test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  shift_api_dump.sql  test_db.db
alembic/: env.py
alembic/versions/: 771633422a07_first.py
shift/: main.py
shift/api/api_v1/: routers.py  validation.py
shift/api/api_v1/endpoints/: grade.py  info.py  user.py
shift/api/v1/: routers.py  validation.py
shift/api/v1/endpoints/: auth.py  grade.py  info.py  user.py
shift/core/: base.py  config.py  db.py  db_init.py  user.py  utils.py
shift/crud/: base.py
shift/crud/grade/: grade.py
shift/crud/info/: info.py
shift/models/: __init__.py  grade.py  user.py
shift/schemas/: grade.py  user.py
tests/: conftest.py  test_grade.py  test_info.py  test_register.py  test_user.py
