[project]
name = "shift-test-api"
version = "0.1.0"
description = ""
authors = [
    {name = "AntonNovozhilov",email = "wowlass63@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standart] (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "fastapi-users (>=14.0.1,<15.0.0)",
    "fastapi-users-db-sqlalchemy (>=7.0.0,<8.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
